refactor(util): 优化文档工具类代码和提升查询功能
- 替换部分 Collectors.toList() 为更简洁的 toList() 调用
- 精简导入语句，移除未使用的 Collectors 依赖
- functionScoreQuery 方法支持动态关键字和品牌加权，增强搜索灵活性
- 优化 NativeQuery 构建，代码风格更统一美观
- HotelDoc 增加 all 字段，用于复合搜索字段索引
- 酒店服务中使用函数评分查询提升投放广告酒店排序优先级
- 聚合查询构建调整格式，提高代码可读性
- 于前端页面添加图片 alt 属性，优化无障碍体验
- 调整地图定位相关事件绑定方式，提高代码规范性
- 精简部分 JavaScript 代码，提升维护性
- 修正 pom.xml 中 Java 版本配置，避免重复定义
- 为测试依赖添加 scope 标签限定作用范围