@@ -33,7 +33,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * @author tianxing
@@ -59,13 +58,15 @@ public class HotelServiceImpl extends ServiceImpl<HotelMapper, Hotel> implements
         if ("default".equals(sortBy)) {
             sortBy = "price";
         }
-        // 投放了广告的酒店排前面 - 使用 function_score 查询
+        // 过滤条件: 对 isAd = true 的酒店加权
         Query filterQuery = Query.of(q -> q.term(t -> t.field("isAd").value(true)));
-        FunctionScoreQuery functionScoreQuery = FunctionScoreQuery.of(fs -> fs.query(boolQuery).functions(f -> f.filter(filterQuery).weight(1000.0)).boostMode(FunctionBoostMode.Multiply));
+        FunctionScoreQuery functionScoreQuery = FunctionScoreQuery.of(fs -> fs.query(boolQuery)
+                .functions(f -> f.filter(filterQuery).weight(1000.0)).boostMode(FunctionBoostMode.Multiply));
         Query finalQuery = Query.of(q -> q.functionScore(functionScoreQuery));
         // 构建查询
         final String finalSortBy = sortBy;
-        NativeQueryBuilder queryBuilder = NativeQuery.builder().withQuery(finalQuery).withPageable(PageRequest.of(searchRequestBody.getPage() - 1, searchRequestBody.getSize()));
+        NativeQueryBuilder queryBuilder = NativeQuery.builder().withQuery(finalQuery)
+                .withPageable(PageRequest.of(searchRequestBody.getPage() - 1, searchRequestBody.getSize()));
         // 添加普通排序
         if (StringUtils.isNotBlank(finalSortBy)) {
             queryBuilder.withSort(s -> s.field(f -> f.field(finalSortBy).order(SortOrder.Asc)));
@@ -76,7 +77,10 @@ public class HotelServiceImpl extends ServiceImpl<HotelMapper, Hotel> implements
             if (latLon.length == 2) {
                 double lat = Double.parseDouble(latLon[0].trim());
                 double lon = Double.parseDouble(latLon[1].trim());
-                queryBuilder.withSort(s -> s.geoDistance(g -> g.field("location").location(l -> l.latlon(ll -> ll.lat(lat).lon(lon))).order(SortOrder.Asc).unit(DistanceUnit.Kilometers).distanceType(GeoDistanceType.Arc)));
+                queryBuilder.withSort(s -> s.geoDistance(g -> g.field("location")
+                                .location(l -> l.latlon(ll -> ll.lat(lat).lon(lon)))
+                                .order(SortOrder.Asc).unit(DistanceUnit.Kilometers)
+                                .distanceType(GeoDistanceType.Arc)));
             }
         }
         SearchHits<HotelDoc> searchHits = elasticsearchOperations.search(queryBuilder.build(), HotelDoc.class);
@@ -88,7 +92,7 @@ public class HotelServiceImpl extends ServiceImpl<HotelMapper, Hotel> implements
                 hotelDoc.setDistance(sortValueList.get(0));
             }
             return hotelDoc;
-        }).collect(Collectors.toList());
+        }).toList();
         return new PageResult(searchHits.getTotalHits(), list);
     }
 
@@ -104,7 +108,10 @@ public class HotelServiceImpl extends ServiceImpl<HotelMapper, Hotel> implements
         // 布尔查询
         Query boolQuery = buildBoolQuery(searchRequestBody);
         // 构建聚合查询
-        NativeQuery query = NativeQuery.builder().withQuery(boolQuery).withPageable(PageRequest.of(0, 1)).withAggregation("cityAgg", Aggregation.of(a -> a.terms(t -> t.field("city").size(100)))).withAggregation("starAgg", Aggregation.of(a -> a.terms(t -> t.field("starName").size(100)))).withAggregation("brandAgg", Aggregation.of(a -> a.terms(t -> t.field("brand").size(100)))).build();
+        NativeQuery query = NativeQuery.builder().withQuery(boolQuery).withPageable(PageRequest.of(0, 1))
+                .withAggregation("cityAgg", Aggregation.of(a -> a.terms(t -> t.field("city").size(100))))
+                .withAggregation("starAgg", Aggregation.of(a -> a.terms(t -> t.field("starName").size(100))))
+                .withAggregation("brandAgg", Aggregation.of(a -> a.terms(t -> t.field("brand").size(100)))).build();
         SearchHits<HotelDoc> searchHits = elasticsearchOperations.search(query, HotelDoc.class);
         // 解析聚合结果
         if (searchHits.hasAggregations()) {
@@ -128,7 +135,7 @@ public class HotelServiceImpl extends ServiceImpl<HotelMapper, Hotel> implements
     private List<String> extractTerms(ElasticsearchAggregations aggregations, String aggName) {
         Aggregate aggregate = Objects.requireNonNull(aggregations.get(aggName)).aggregation().getAggregate();
         StringTermsAggregate termsAgg = aggregate.sterms();
-        return termsAgg.buckets().array().stream().map(StringTermsBucket::key).map(FieldValue::stringValue).collect(Collectors.toList());
+        return termsAgg.buckets().array().stream().map(StringTermsBucket::key).map(FieldValue::stringValue).toList();
     }
 
     /**
@@ -165,7 +172,8 @@ public class HotelServiceImpl extends ServiceImpl<HotelMapper, Hotel> implements
         }
         // 按价格过滤
         if (minPrice != null && maxPrice != null) {
-            boolBuilder.filter(Query.of(q -> q.range(r -> r.number(n -> n.field("price").gte((double) minPrice).lte((double) maxPrice)))));
+            boolBuilder.filter(Query.of(
+                    q -> q.range(r -> r.number(n -> n.field("price").gte((double) minPrice).lte((double) maxPrice)))));
         }
         return Query.of(q -> q.bool(boolBuilder.build()));
     }
